# codeguard

./: .gitignore  docker-compose.yml  index.html  need_human.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
.github/workflows/: pr-check.yml
backend/: .env.example  .gitignore  GITHUB_APP_SETUP.md  alembic.ini  init-db.sql  private-key.pem.example  pyproject.toml  requirements.txt  start.sh  verify_github_app_config.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_phase23_tables.py
backend/app/: main.py
backend/app/api/v1/: alerts.py  appeals.py  auth.py  config.py  deliverables.py  health.py  metrics.py  reviews.py  router.py  sla.py  specs.py  training.py  vendors.py  webhooks.py
backend/app/core/: config.py  database.py  github_client.py  security.py
backend/app/models/: models.py
backend/app/schemas/: auth.py  metrics.py  response.py  review.py  sla.py  vendor.py
backend/app/scripts/: import_specs.py  init_users.py  mock_github_webhook.py
backend/app/services/: alert_engine.py  audit_logger.py  delivery_validator.py  github_permissions.py  notification_service.py  pr_processor.py  quality_gates.py  sla_engine.py  spec_engine.py
backend/tests/: __init__.py  conftest.py  test_alert_engine.py  test_api.py  test_delivery_validator.py  test_sla_engine.py
docs/: PRD.md
src/: App.tsx  index.css
src/components/business/: VendorRadarChart.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/components/ui/: badge.tsx  button.tsx
src/lib/: api.ts  types.ts
src/mocks/: data.ts
(+7 files in other folders)
